    - tool level system based on an enum-list-like system were every block defines an Enum-entry for minimum
    - rendering helper class for setting up things like 3d rendering, alpha usage, ...
    - add an line into logging where the system searches for the location where the error occur and will link the mod
        caused it into the log


changelog of snapshot [next] (theme: feature cleanup & improvements)
    changelog of dev-cycle 1 [optimisations to rendering]
        - optimized block rendering, deprecated some old stuff
        - re-ordered some UV-related stuff, you may want to update your own models

        fixed issues:
            from versions before this snapshot:
                - block updates were not called in every case
                - walls and fences were not updating their state correctly
                - during printing an exception, an new exception could occur
                - event "worldgen:chunk:finished" was not called in most cases

    changelog of dev-cycle 2 [modding improvements]
        - improved dependency system for mods
        - deprecated some old stuff
        - added config system for mods & internals [incompatible with mc config files]
        - improved existing factories & added some more factories & entries

        fixed issues:
            from previous cycle:
                - minecraft version tuple could contain string-instances
                - slab textures on side were upside down

            from versions before this snapshot:
                - data packs may not get unloaded when they needed to

    changelog of dev-cycle 3 [State-definition files]
        - improved exception handling
        - added StateConfigFile.py handling State-confog-files
        - deprecated some more functions, attributes, etc.

        fixed issues:
            from previous cycle:
                - AdvancedBlockFactory was not working

    changelog of dev-cycle 4

        fixed issues: