@@ -34,6 +34,8 @@ marked for removal in alpha 1.3.0:
     [2] World.show_sector(), World.hide_sector(), World.change_sectors(), World.process_queue(), World.process_tasks()
     [2] World.process_entire_queue()
     [2] Chunk.add_default_attribute()'s authcode parameter
+    [2] Dimension.get_block(), Dimension.add_block(), Dimension.remove_block(), Dimension.check_neighbors()
+    [2] Dimension.show_block(), Dimension.hide_block()
 
 marked for removal in alpha 1.4.0:
     [2] Item.get_name, Block.get_name, State.get_name
