@@ -14,26 +14,52 @@ import block.Block
 import mod.ModMcpython
 import sys
 import rendering.OpenGLSetupFile
+import typing
+import deprecation
 
 
 class DimensionDefinition:
+    """
+    class for an dimension placeholder
+    """
+
     def __init__(self, name: str, config: dict):
+        """
+        will create an new placeholder
+        WARNING: must be send to G.dimensionhandler
+        :param name: the dimension name
+        :param config: the config for it
+        """
         self.name = name
         self.id = None
         self.config = config
 
-    def setStaticId(self, dimid):
+    def setStaticId(self, dimid: int):
+        """
+        will set the id of the dimension (when static)
+        :param dimid: the id for the dimension
+        :return: self
+        """
         self.id = dimid
         return self
 
 
 class DimensionHandler:
+    """
+    Handler for the dimensions
+    Works together with the World-class in handling the system
+    This class holds general data about the status of the game dimensions, not for an world instance
+    """
+
     def __init__(self):
         self.dimensions = {}
         self.unfinisheddims = []
         mod.ModMcpython.mcpython.eventbus.subscribe("stage:post", self.finish)
 
     def finish(self):
+        """
+        called to finish up and assign ids to dynamic dimensions
+        """
         i = 0
         for dim in self.unfinisheddims:
             while i in self.unfinisheddims: i += 1
@@ -41,25 +67,30 @@ class DimensionHandler:
             self.add_dimension(dim)
 
     def add_default_dimensions(self):
+        """
+        implementation for mcpython: will add the dimensions used by the core into the system
+        """
         self.add_dimension(DimensionDefinition("overworld", {"configname": (
             "default_overworld" if "--debug-world" not in sys.argv else "debug_overworld")}).setStaticId(0))
         self.add_dimension(DimensionDefinition("nether", {"configname": None}).setStaticId(-1))
         self.add_dimension(DimensionDefinition("end", {"configname": None}).setStaticId(1))
 
     def add_dimension(self, dim: DimensionDefinition):
+        """
+        will add an new dimension definition into the system
+        :param dim: the dimension defintion to add
+        """
         if dim.id is None:
             self.unfinisheddims.append(dim)
         else:
             self.dimensions[dim.id] = dim
 
     def init_dims(self):
+        """
+        will create all dimension in the active world
+        """
         for dim in self.dimensions.values():
             G.world.add_dimension(dim.id, dim.name, config=dim.config)
-
-    def setup_dimensions(self):
-        for dimension in self.dimensions:
-            definition: DimensionDefinition = self.dimensions[dimension]
-            G.world.add_dimension(dimension, definition.name, definition.config)
 
 
 G.dimensionhandler = DimensionHandler()
@@ -68,9 +99,21 @@ mod.ModMcpython.mcpython.eventbus.subscribe("stage:dimension", G.dimensionhandle
 
 
 class Dimension:
-    def __init__(self, world, id, name: str, genconfig={}):
-        self.id = id
-        self.world = world
+    """
+    class holding an whole dimension
+    """
+
+    def __init__(self, world_in, dim_id: int, name: str, genconfig=None):
+        """
+        Creates an new dimension. Must be send also to the World-instance
+        :param world_in: the world instance to use
+        :param dim_id: the id for it
+        :param name: the name for it
+        :param genconfig: the config to use for generation
+        """
+        if genconfig is None: genconfig = {}
+        self.id = dim_id
+        self.world = world_in
         self.chunks = {}
         self.name = name
         self.worldgenerationconfig = genconfig
@@ -78,7 +121,19 @@ class Dimension:
         # normal batch
         self.batches = [pyglet.graphics.Batch() for _ in range(2)]  # normal, alpha
 
-    def get_chunk(self, cx, cz, generate=True, create=True) -> world.Chunk.Chunk or None:
+    def get_chunk(self, cx: typing.Union[int, typing.Tuple[int, int]], cz: int = None, generate: bool = True,
+                  create: bool = True) -> typing.Union[world.Chunk.Chunk, None]:
+        """
+        used to get an chunk instance with an given position
+        :param cx: the chunk x position or an tuple of (x, z)
+        :param cz: the chunk z position or None íf cx is tuple
+        :param generate: if the chunk should be scheduled for generation if it is not generated
+        :param create: if the chunk instance should be created when it does not exist
+        :return: the chunk instance or None
+        """
+        if cz is None:
+            assert type(cx) == tuple
+            cx, cz = cx
         if (cx, cz) not in self.chunks:
             if not create:
                 return
@@ -87,30 +142,45 @@ class Dimension:
                 G.worldgenerationhandler.add_chunk_to_generation_list(self.chunks[(cx, cz)])
         return self.chunks[(cx, cz)]
 
-    def get_chunk_for_position(self, position, **kwargs) -> world.Chunk.Chunk or None:
+    def get_chunk_for_position(self, position: typing.Union[typing.Tuple[float, float, float], block.Block.Block],
+                               **kwargs) -> typing.Union[world.Chunk.Chunk, None]:
+        """
+        gets an chunk for an position
+        :param position: the position to use or the block instance to use
+        :param kwargs: same as get_chunk()
+        :return: the chunk instance or None
+        """
         if issubclass(type(position), block.Block.Block):
             position = position.position
         return self.get_chunk(*util.math.sectorize(position), **kwargs)
 
-    def get_block(self, position):
-        chunk = self.get_chunk_for_position(position, generate=False)
+    @deprecation.deprecated("dev1-4", "a1.3.0")
+    def get_block(self, position: typing.Tuple[int, int, int]) -> typing.Union[block.Block.Block, str, None]:
+        chunk = self.get_chunk_for_position(position, generate=False, create=False)
+        if chunk is None: return
         return chunk.get_block(position)
 
+    @deprecation.deprecated("dev1-4", "a1.3.0")
     def add_block(self, position: tuple, blockname: str, immediate=True, block_update=True, blockupdateself=True,
                   args=[], kwargs={}):
-        return self.get_chunk_for_position(position).add_block(position, blockname, immediate=immediate,
-                                                               block_update=block_update, args=args, kwargs=kwargs,
-                                                               blockupdateself=blockupdateself)
+        chunk = self.get_chunk_for_position(position, generate=False)
+        return chunk.add_block(position, blockname, immediate=immediate, block_update=block_update, args=args,
+                               kwargs=kwargs, blockupdateself=blockupdateself)
 
+    @deprecation.deprecated("dev1-4", "a1.3.0")
     def remove_block(self, position: tuple, immediate=True, block_update=True, blockupdateself=True):
-        self.get_chunk_for_position(position).remove_block(position, immediate=immediate, block_update=block_update,
-                                                           blockupdateself=blockupdateself)
+        chunk = self.get_chunk_for_position(position)
+        chunk.remove_block(position, immediate=immediate, block_update=block_update, blockupdateself=blockupdateself)
 
-    def check_neighbors(self, position): self.get_chunk_for_position(position).check_neighbors(position)
+    @deprecation.deprecated("dev1-4", "a1.3.0")
+    def check_neighbors(self, position: typing.Tuple[int, int, int]):
+        self.get_chunk_for_position(position).check_neighbors(position)
 
+    @deprecation.deprecated("dev1-4", "a1.3.0")
     def show_block(self, position, immediate=True):
         self.get_chunk_for_position(position).show_block(position, immediate=immediate)
 
+    @deprecation.deprecated("dev1-4", "a1.3.0")
     def hide_block(self, position, immediate=True):
         self.get_chunk_for_position(position).hide_block(position, immediate=immediate)
 
